--- a/index.html
+++ b/index.html
@@ -50,4 +50,7 @@
         <a href="/color-pencil">color-pencil</a> </li>
     <li>
         <a href="/talking-tom-musical">talking-tom-musical</a> </li>
+
+    <li>
+        <a href="/helicopter">helicopter</a> </li>
 </ul>
