--- a/helicopter/index.html
+++ b/helicopter/index.html
@@ -179,8 +179,10 @@
 						<div id="product-img-nav">
 							<div class='wrapper'>
 								<img class='selected'
-									src='cdn.landingcube.com/1/products/24339/product_image_5f070a89ecc31.jpg'><img
-									src='cdn.landingcube.com/1/products/24339/product_image_5f070a8a59828.jpg'><img
+									src='cdn.landingcube.com/1/products/24339/product_image_5f070a8a59828.jpg'>
+									<img 
+									src='cdn.landingcube.com/1/products/24339/product_image_5f070a89ecc31.jpg'>
+									<img
 									src='cdn.landingcube.com/1/products/24339/product_image_5f070a8ab5444.jpg'><img
 									src='cdn.landingcube.com/1/products/24339/product_image_5f070a8b11c76.jpg'><img
 									src='cdn.landingcube.com/1/products/24339/product_image_5f070a8b6d666.jpg'> </div>
