--- a/helicopter/index.html
+++ b/helicopter/index.html
@@ -95,7 +95,7 @@
 				value: 5.99,
 				currency: 'INR',
 				content_type: 'product', // required property
-				content_ids: '1591983957pages_commerce_sell5ee3bf55eeb219c54280704' // required property, if not using 'contents' property
+				content_ids: '1596831857pages_commerce_sell5f2db8721dfd96c80656366' // required property, if not using 'contents' property
 			}
 			// end required parameter object
 		);
@@ -109,7 +109,7 @@
 					value: 599.00,
 					currency: 'INR',
 					content_type: 'product', // required property
-					content_ids: '1591983957pages_commerce_sell5ee3bf55eeb219c54280704' // required property, if not using 'contents' property
+					content_ids: '1596831857pages_commerce_sell5f2db8721dfd96c80656366' // required property, if not using 'contents' property
 				}
 				// end required parameter object
 			);
@@ -165,27 +165,25 @@
 								<img width='500' height='500'
 									src='cdn.landingcube.com/1/products/24339/product_image_5f070a8a59828.jpg'
 									style='display: none;'>
-									<img width='500' height='500'
+								<img width='500' height='500'
 									src='cdn.landingcube.com/1/products/24339/product_image_5f070a89ecc31.jpg'
 									style='display: none;'>
-									<img width='500' height='500'
+								<img width='500' height='500'
 									src='cdn.landingcube.com/1/products/24339/product_image_5f070a8ab5444.jpg'
 									style='display: none;'><img width='500' height='500'
 									src='cdn.landingcube.com/1/products/24339/product_image_5f070a8b11c76.jpg'
 									style='display: none;'><img width='500' height='500'
 									src='cdn.landingcube.com/1/products/24339/product_image_5f070a8b6d666.jpg'
 									style='display: none;'>
-							
+
 							</div>
 						</div>
 						<div id="product-img-nav">
 							<div class='wrapper'>
 								<img class='selected'
 									src='cdn.landingcube.com/1/products/24339/product_image_5f070a8a59828.jpg'>
-									<img 
-									src='cdn.landingcube.com/1/products/24339/product_image_5f070a89ecc31.jpg'>
-									<img
-									src='cdn.landingcube.com/1/products/24339/product_image_5f070a8ab5444.jpg'><img
+								<img src='cdn.landingcube.com/1/products/24339/product_image_5f070a89ecc31.jpg'>
+								<img src='cdn.landingcube.com/1/products/24339/product_image_5f070a8ab5444.jpg'><img
 									src='cdn.landingcube.com/1/products/24339/product_image_5f070a8b11c76.jpg'><img
 									src='cdn.landingcube.com/1/products/24339/product_image_5f070a8b6d666.jpg'> </div>
 						</div>
