--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                             </a>
                         </li>
                         <li class="col-md-4 list-inline-item align-self-center pl-0">
-                            <a class="text-dark" rel="stores" href="mailto:sanjeevshaw1987@gmail.com">
+                            <a class="text-dark" rel="stores" href="mailto:usventerprises19@gmail.com">
                                 <i style="font-size: 25px; color: grey;" class="fa fa-envelope" aria-hidden="true"></i>
-                                <small>sanjeevshaw1987@gmail.com</small>
+                                <small>usventerprises19@gmail.com</small>
                             </a>
                         </li>
                     </ul>
